feat: user usecases and interfaces
